Uploading version project archive instead of files