@@ -4,13 +4,11 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.omgservers.model.dto.developer.CreateVersionDeveloperRequest;
 import com.omgservers.model.dto.developer.UploadVersionDeveloperRequest;
 import com.omgservers.model.dto.developer.UploadVersionDeveloperResponse;
-import com.omgservers.model.file.DecodedFileModel;
 import com.omgservers.model.version.VersionConfigModel;
-import com.omgservers.model.version.VersionSourceCodeModel;
 import com.omgservers.service.entrypoint.developer.impl.operation.EncodeFilesOperation;
+import com.omgservers.service.entrypoint.developer.impl.service.developerService.impl.method.createVersion.CreateVersionMethod;
 import com.omgservers.service.exception.ExceptionQualifierEnum;
 import com.omgservers.service.exception.ServerSideBadRequestException;
-import com.omgservers.service.entrypoint.developer.impl.service.developerService.impl.method.createVersion.CreateVersionMethod;
 import io.smallrye.mutiny.Uni;
 import io.smallrye.mutiny.infrastructure.Infrastructure;
 import jakarta.enterprise.context.ApplicationScoped;
@@ -20,6 +18,7 @@ import lombok.extern.slf4j.Slf4j;
 
 import java.io.IOException;
 import java.nio.file.Files;
+import java.util.Base64;
 
 @Slf4j
 @ApplicationScoped
@@ -27,7 +26,7 @@ import java.nio.file.Files;
 class UploadVersionMethodImpl implements UploadVersionMethod {
 
     private static final String CONFIG_JSON = "config.json";
-    private static final String LUA_EXTENSION = ".lua";
+    private static final String PROJECT_ZIP = "project.zip";
 
     final CreateVersionMethod createVersionMethod;
 
@@ -53,8 +52,8 @@ class UploadVersionMethodImpl implements UploadVersionMethod {
         final var config = getConfig(request);
         createVersionDeveloperRequest.setVersionConfig(config);
 
-        final var sourceCode = getSourceCode(request);
-        createVersionDeveloperRequest.setSourceCode(sourceCode);
+        final var base64Archive = getBase64Archive(request);
+        createVersionDeveloperRequest.setBase64Archive(base64Archive);
 
         return Uni.createFrom().item(createVersionDeveloperRequest);
     }
@@ -75,24 +74,25 @@ class UploadVersionMethodImpl implements UploadVersionMethod {
                 })
                 .findFirst()
                 .orElseThrow(() -> new ServerSideBadRequestException(ExceptionQualifierEnum.CONFIG_JSON_NOT_FOUND,
-                        "config.json was not found, request=" + request));
+                        CONFIG_JSON + " was not found, request=" + request));
     }
 
-    VersionSourceCodeModel getSourceCode(final UploadVersionDeveloperRequest request) {
-        final var decodedFiles = request.getFiles().stream()
-                .filter(fileUpload -> fileUpload.name().endsWith(LUA_EXTENSION))
+    String getBase64Archive(final UploadVersionDeveloperRequest request) {
+        return request.getFiles().stream()
+                .filter(fileUpload -> fileUpload.name().equals(PROJECT_ZIP))
                 .map(fileUpload -> {
                     try {
-                        final var fileContent = Files.readString(fileUpload.filePath());
-                        return new DecodedFileModel(fileUpload.name(), fileContent);
+                        final var fileContent = Files.readAllBytes(fileUpload.filePath());
+                        final var base64Archive = Base64.getEncoder().encodeToString(fileContent);
+                        return base64Archive;
                     } catch (IOException e) {
-                        throw new ServerSideBadRequestException(ExceptionQualifierEnum.VERSION_FILE_WRONG,
-                                String.format("%s was not parsed, request=%s, %s", fileUpload.fileName(), request,
-                                        e.getMessage()), e);
+                        throw new ServerSideBadRequestException(ExceptionQualifierEnum.PROJECT_ZIP_WRONG,
+                                String.format("config.json was not parsed, request=%s, %s",
+                                        request, e.getMessage()), e);
                     }
                 })
-                .toList();
-        final var encodedFiles = encodeFilesOperation.encodeFiles(decodedFiles);
-        return new VersionSourceCodeModel(encodedFiles);
+                .findFirst()
+                .orElseThrow(() -> new ServerSideBadRequestException(ExceptionQualifierEnum.PROJECT_ZIP_NOT_FOUND,
+                        PROJECT_ZIP + " was not found, request=" + request));
     }
 }
